--- a/src/index.css
+++ b/src/index.css
@@ -30,12 +30,21 @@ h1 {
   align-items: flex-start;
   max-width: 75%;
 }
-.form {
+.form__container {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+
   gap: 1rem;
   padding-block: 5rem;
+  width: 75%;
+}
+.form {
+  display: flex;
+  width: 75%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .form__inpt--area {
   display: flex;
@@ -54,7 +63,7 @@ input {
 }
 
 button {
-  width: 100%;
+  max-width: 100%;
   border-radius: 5px;
   border: 0px;
   color: white;
@@ -65,5 +74,7 @@ button {
 }
 
 img {
-  max-width: 100%;
+  max-width: 75%;
+  margin: 0 auto;
+  text-align: center;
 }
